--- a/client/src/pages/BugReportsAdminPage.module.css
+++ b/client/src/pages/BugReportsAdminPage.module.css
@@ -29,7 +29,7 @@
 }
 
 .pageTitle {
-  font-size: 32px;
+  font-size: 22px;
   font-weight: 700;
   color: var(--text-primary);
   margin: 0;
